@@ -118,7 +118,8 @@ enum RENDERER_DEBUG_PAGE
 	RENDERER_STATS,
 	DIMENSION_STATS,
 	LARA_STATS,
-	LOGIC_STATS
+	LOGIC_STATS,
+	WIREFRAME_MODE
 };
 
 enum RendererTransparentFaceType
